--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "html2pdf.js": "^0.10.2",
         "react": "^18.3.1",
         "react-dom": "^18.2.0",
-        "react-icons": "^5.2.1"
+        "react-icons": "^5.2.1",
+        "react-router-dom": "^6.26.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
