--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "1-portfolio": "file:",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
